# poker-arena-sandbox-kit

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  README.md  SUBMITTING.md  arena  pyproject.toml
arena_sdk/: __init__.py  __main__.py  auth.py  comps.py  pack.py  submit.py
arena_sdk/poker/: __init__.py  contract.py  engine.py  read.py
examples/poker/: strategy.py
examples/poker/byo/: my_bot.py  strategy.py
examples/poker/skeletons/: always_call.py  always_fold.py  random_action.py
tests/: test_smoke.py
tests/fixtures/: golden_pve.json  golden_pvp.json
